--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,19 +33,21 @@
                 android:id="@+id/nav_footer_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Developed by :-"
-                android:textSize="16sp"
+                android:text="Made by :-"
+                android:textColor="@color/black"
+                android:textSize="13sp"
                 android:textStyle="bold"
                 android:layout_marginTop="8dp"/>
+
             <TextView
-                android:layout_below="@id/nav_footer_name"
                 android:id="@+id/name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Ayush Yadav I.T. 2027"
-                android:textSize="16sp"
+                android:layout_below="@id/nav_footer_name"
+                android:fontFamily="@font/aclonica"
+                android:text="Ayush Yadav\nI.T. 2027"
                 android:textColor="@color/food"
-                />
+                android:textSize="13sp" />
 
         </RelativeLayout>
     </com.google.android.material.navigation.NavigationView>
