--- a/app/src/main/res/layout/poll_detail_layout.xml
+++ b/app/src/main/res/layout/poll_detail_layout.xml
@@ -4,22 +4,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
 
+    android:background="@color/white"
     android:layout_marginBottom="10dp">
 
     <TextView
         android:id="@+id/tvOpt"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="100dp"
         android:paddingHorizontal="10dp"
         android:textStyle="bold|italic"
         android:gravity="center_vertical"
-        android:text="w it very well ayuh yadav yausjcdjkngfjkgvsfjkvhsfjkhsjkvbsh mxcnsvbsfvsdjbnscjscn"
         android:textColor="@color/black"
         android:textSize="18sp"
-        android:paddingVertical="5dp"
         app:layout_constraintBottom_toTopOf="@+id/adder"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
