--- a/app/src/main/res/layout/poll_detail_layout.xml
+++ b/app/src/main/res/layout/poll_detail_layout.xml
@@ -4,8 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-
     android:background="@color/white"
+
     android:layout_marginBottom="10dp">
 
     <TextView
@@ -18,6 +18,7 @@
         android:gravity="center_vertical"
         android:textColor="@color/black"
         android:textSize="18sp"
+        android:paddingVertical="5dp"
         app:layout_constraintBottom_toTopOf="@+id/adder"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
