--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Theme.Messease" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Messease" parent="ThemeOverlay.MaterialComponents.Dark">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_200</item>
         <item name="colorPrimaryVariant">@color/food</item>
