--- a/app/src/main/res/layout/fragment_polls.xml
+++ b/app/src/main/res/layout/fragment_polls.xml
@@ -21,14 +21,15 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-      android:layout_marginTop="7dp"
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:nestedScrollingEnabled="false"
         android:padding="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/message" />
+        app:layout_constraintTop_toTopOf="@+id/message" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
