--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -20,21 +20,26 @@
         app:layout_constraintTop_toTopOf="parent"
         app:titleEnabled="true"
         app:titleTextColor="@color/white" />
-<ImageView
-    android:id="@+id/iv"
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:src="@drawable/transfer"
-    android:paddingHorizontal="25dp"
-    app:layout_constraintTop_toBottomOf="@id/toolbar"
-    app:layout_constraintBottom_toTopOf="@id/btnPay"/>
+
+    <ImageView
+        android:id="@+id/iv"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:paddingHorizontal="25dp"
+        android:src="@drawable/transfer"
+        app:layout_constraintBottom_toTopOf="@id/btnPay"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar" />
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnPay"
         android:layout_width="match_parent"
         android:layout_height="59dp"
-        android:text="Pay"
         android:layout_marginHorizontal="25dp"
         android:layout_marginBottom="35dp"
+        android:enabled="false"
+        android:text="Pay"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
