--- a/app/src/main/res/layout/loading.xml
+++ b/app/src/main/res/layout/loading.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="220dp"
+    android:layout_width="wrap_content"
     android:layout_height="180dp"
     app:cardCornerRadius="0dp"
     app:cardBackgroundColor="@color/menu"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
-        android:layout_width="220dp"
+        android:layout_width="wrap_content"
         android:layout_height="180dp"
         android:gravity="center"
         android:orientation="vertical">
@@ -14,6 +14,7 @@
             android:id="@+id/lottieAnimationView"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:layout_marginHorizontal="50dp"
             app:lottie_rawRes="@raw/loading_animation"
             app:lottie_autoPlay="true"
             app:lottie_loop="true"/>
